# Battalion

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  run_all_migrations.sh  start.sh
_docs/: CRACKED_APPLICATION.md  TODOS.md  VOTE_DATA_MODEL.md
applicant/: Cargo.toml
applicant/migrations/: 001_create_applicant.surql  002_seed_applicant.surql
applicant/src/: handlers.rs  lib.rs  models.rs  routes.rs
applicant/templates/: applicant_form.html  applicant_list.html
components/: Cargo.toml
components/src/: lib.rs
components/templates/macros/: forms.html
event/: Cargo.toml
event/migrations/: 001_create_event.surql  002_seed_event.surql
event/src/: handlers.rs  lib.rs  models.rs  routes.rs
event/templates/: event_form.html  event_list.html
home/: Cargo.toml
home/src/: handlers.rs  lib.rs  routes.rs
home/templates/: index.html
job/: Cargo.toml
job/migrations/: 001_create_job.surql  002_seed_job.surql
job/src/: handlers.rs  lib.rs  models.rs  routes.rs
job/templates/: job_form.html  job_list.html
leaderboard/: Cargo.toml
leaderboard/src/: handlers.rs  lib.rs  routes.rs
leaderboard/templates/: leaderboard.html
public/css/: apply.css  main.css  variables.css
queue/: Cargo.toml
queue/src/: handlers.rs  routes.rs
queue/templates/: queue.html
review/: Cargo.toml
review/migrations/: 001_create_review.surql
review/src/: handlers.rs  models.rs  routes.rs
review/templates/: grid.html  grid.html.tera
serde_withs/: Cargo.toml
serde_withs/src/: lib.rs
shared/: Cargo.toml
shared/src/: error.rs  id_string.rs  lib.rs
shared/templates/macros/: components.html  forms.html  icons.html  rich_editor.html
shared_macros/: Cargo.toml
shared_macros/src/: lib.rs
src/: main.rs
src/models/: apply.rs
src/routes/: apply.rs
src/templates/macros/: forms.html
src/views/: index.html  index.html.tera
src/views/macros/: forms.html
vote/: Cargo.toml
vote/migrations/: 001_create_vote.surql  002_set_vote.surql
vote/src/: handlers.rs  lib.rs  models.rs  routes.rs
vote/templates/: vote_widget.html
website/: Cargo.toml
website/public/css/: apply.css  apply_section.css  button.css  event.css  forms.css  grid.css  home_page.css  job_section.css  leaderboard.css  main.css  queue_section.css  review.css  rich_text_editor.css  stepper.css  variables.css
website/public/js/: rich_text_editor.js  vote-widget.js
website/src/: main.rs
website/src/views/: base.html  index.html
