[package]
name = "Battalion"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
surrealdb = { version = "2.3.3", features = ["kv-mem", "protocol-ws"] }
tera = "1.20.0"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
schemars = { version = "0.8", features = ["derive", "url"] }
url = { version = "2.5", features = ["serde"] }
