[workspace]
members = ["website", "event", "job", "applicant"]
resolver = "3"

[workspace.dependencies]
axum = "0.8.4"
serde = "1.0.219"
serde_json = "1.0.140"
surrealdb = "2.3.3"
tera = "1.20.0"
tokio = "1.45.1"
tower-http = "0.5"
schemars = "0.8"
url = "2.5"
chrono = "0.4"
uuid = { version = "1", features = ["serde", "v4"] }
