[package]
name = "event"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
surrealdb = { workspace = true }
tokio = { workspace = true }
tera = { workspace = true }
schemars = { workspace = true }
url = { workspace = true }
applicant = { path = "../applicant" }
chrono = { workspace = true }
job = { path = "../job" }
shared = { path = "../shared" }
serde_with = { workspace = true, features = ["macros"] }
serde_withs = { path = "../serde_withs" }
