[package]
name = "review"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
surrealdb = { workspace = true }
tokio = { workspace = true }
tera = { workspace = true }
url = { workspace = true }
applicant = { path = "../applicant" }
job = { path = "../job" }
shared = { path = "../shared" }
