[package]
name = "website"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
surrealdb = { workspace = true, features = ["kv-mem", "protocol-ws"] }
tera = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["fs"] }
schemars = { workspace = true, features = ["derive", "url"] }
url = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
uuid = { workspace = true }

# local crates
event = { path = "../event" }
job = { path = "../job" }
applicant = { path = "../applicant" }
shared = { path = "../shared" }

